--- a/Riddle Me This/css/book.css
+++ b/Riddle Me This/css/book.css
@@ -18,7 +18,7 @@
 
 .book h2 {
 	margin-left: 1em;
-	font-family: 'Noto Sans JP', sans-serif;
+	font-family: 'Futura', sans-serif;
 	font-weight: 900;
 	font-size: 2em;
 }
