--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /* vars */
 :root {
-  --background-color: #e5e49c;
+  --background-color: #ffffff;
   --link-color: #E2E3E3;
   --alt-link-color: #111;
-  --body-color: #111111;
+  --body-color: #e5e49c;
   --light-grey: #A9AAAA;
   --lighter-grey: #C6C7C6;
   --lightest-grey: #E2E3E3;
