--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* vars */
 :root {
-  --background-color: #ffffff;
+  --background-color: #e5e49c;
   --link-color: #E2E3E3;
   --alt-link-color: #111;
   --body-color: #e5e49c;
