--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --background-color: #e5e49c;
   --link-color: #E2E3E3;
   --alt-link-color: #111;
-  --body-color: #e5e49c;
+  --body-color: #111111;
   --light-grey: #A9AAAA;
   --lighter-grey: #C6C7C6;
   --lightest-grey: #E2E3E3;
