--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -1,14 +1,6 @@
 body {
-    background-color: #000;
-    text-align: left;
+    background-color: antiquewhite;
     margin: 0;
-    color: green;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.6;
-    font-family: Helvetica, sans-serif;
-    height: 100%;
-    position: relative;
 }
 
 .wrapper {
