--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -1,11 +1,19 @@
 body {
     background-color: antiquewhite;
+    text-align: center;
     margin: 0;
+    color: black;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.6;
+    font-family: Helvetica, sans-serif;
+    height: 100%;
+    position: relative;
 }
 
 .wrapper {
     position: relative;
-    max-width: 960px;
+    max-width: 1280px;
     margin: 0 auto;
 }
 
@@ -18,20 +26,16 @@ body {
   height: 100vh;
 }
 
-#footer {
-    color: black;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.6;
-    font-family: Helvetica, sans-serif;
-    height: 100%;
-    position: absolute;
+.big {
+  font-family: Berlin, sans-serif
+  color: #ffffff;
+  font-weight: 700;
 }
 
-.left-button {
-  position: absolute;
-  padding: 20px;
-  background-color: pink;
-  left: 30px;
-  top: 30px;
+#footer {
+    width: 100%;
+    overflow: hidden;
+    text-align: center;
+    font-size: .75em;
+    background-color: black;
 }
