--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -3,12 +3,6 @@ body {
     text-align: center;
     margin: 0;
     color: black;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.6;
-    font-family: Helvetica, sans-serif;
-    height: 100%;
-    position: relative;
 }
 
 .wrapper {
@@ -34,5 +28,11 @@ body {
     overflow: hidden;
     text-align: center;
     font-size: .75em;
-    background-color: black;
+    color: black;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.6;
+    font-family: Helvetica, sans-serif;
+    height: 100%;
+    position: relative;
 }
