--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -16,9 +16,19 @@ body {
   /*align-items: center;*/
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100vh;
-}
+  min-width: 100%;
+  height: auto;
+  display: block;
+  }
+
+.cbutton {
+  display: block;
+  height: 95px;
+  width: 205px;
+  position: fixed;
+  align-items: center;
+  bottom: 600px;
+}  
 
 #footer {
     width: 100%;
