--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -27,7 +27,8 @@ body {
   width: 205px;
   position: fixed;
   align-items: center;
-  bottom: 600px;
+  bottom: 700px;
+  right: 350px;
 }  
 
 #footer {
@@ -40,6 +41,6 @@ body {
     font-weight: 400;
     line-height: 1.6;
     font-family: Helvetica, sans-serif;
-    height: 100%;
+    height: 50px;
     position: relative;
 }
