--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -22,6 +22,9 @@ body {
   }
 
 .cbutton {
+  background-color: #ffffff;
+  opacity: 0;
+  display: block;
   height: 95px;
   width: 205px;
   position: fixed;
