--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -26,8 +26,7 @@ body {
   position: absolute;
   top: 8px;
   left: 16px;
-  margin: 10px;
-  width: 100%;
+  width: 98%;
   text-align: left;
   color: black;
   font-size: 28px;
@@ -48,7 +47,7 @@ body {
 }  
 
 .lbutton {
-  background-image: url("button.png");
+  background-image: "images/button.png";
   display: block;
   height: 95px;
   width: 205px;
@@ -64,7 +63,7 @@ body {
 }
 
 .rbutton {
-  background-image: url("button.png");
+  background-image: "images/button.png";
   display: block;
   height: 95px;
   width: 205px;
