--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -45,11 +45,19 @@ body {
 }
 
 .cbutton {
-  background-color: #ffffff;
-  opacity: 0;
   display: block;
   height: 95px;
   width: 205px;
+  position: fixed;
+  align-items: center;
+  bottom: 516px;
+  right: 1100px;
+}  
+
+.ebutton {
+  display: block;
+  height: 150px;
+  width: 315px;
   position: fixed;
   align-items: center;
   bottom: 516px;
