--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -2,57 +2,95 @@ body {
     background-color: antiquewhite;
     text-align: center;
     margin: 0;
+    font-size: 10px;
     color: black
     height: auto;
 }
 
 .wrapper {
     position: relative;
-    max-width: 1280px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
-#game-holder {
+#game-holder-outer {
   display: flex;
   /*align-items: center;*/
   align-items: center;
   justify-content: center;
-  min-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  }
+
+#game-holder {
+  position: relative;
+  width: 100%;
+  align-self: center;
   display: block;
   }
 
-.text {
-  position: absolute;
-  top: 8px;
-  left: 16px;
-  width: 98%;
-  text-align: left;
-  color: black;
-  font-size: 28px;
-  font-weight: 400;
-  font-family: "Fira Sans";
+#game-holder img {
+  width: 100%;
+  display: block;
+  height: auto;
 }
 
-.btext {
+.text {
   position: absolute;
-  width: 98%;
-  text-align: center;
-  color: white;
-  font-size: 28px;
+  top: 0;
+  left: 0;
+  width: calc(100% - 40px);
+  background-color: tan;
+  padding: 20px;
+  text-align: left;
+  color: black;
+  font-size: 1em;
   font-weight: 400;
-  font-family: "Josefin Sans";
+  font-family: "Fira Sans";
+  border-bottom: 3px solid black;
 }
 
 .cbutton {
-  display: block;
-  height: 95px;
-  width: 205px;
-  position: fixed;
-  align-items: center;
-  bottom: 516px;
-  right: 1100px;
-}  
+  border-radius: 25px;
+  width: 5em;
+  position: absolute;
+  bottom: 5em;
+  left: calc(50% - 2.5em);
+  padding: 1em;
+  background-color: red;
+  display: inline-block;
+  text-align: center;
+}
+
+.button-style {
+  color: white;
+  font-size: 1em;
+  font-weight: 400;
+  font-family: "Josefin Sans";
+  text-decoration: none;
+}
+
+.lbutton {
+  border-radius: 25px;
+  position: absolute;
+  left: 20%;
+  bottom: 5em;
+  padding: 1em;
+  background-color: red;
+  display: inline-block;
+  text-align: center;
+}
+
+.rbutton {
+  border-radius: 25px;
+  position: absolute;
+  right: 20%;
+  bottom: 5em;
+  padding: 1em;
+  background-color: red;
+  display: inline-block;
+  text-align: center;
+}
 
 .ebutton {
   display: block;
@@ -64,34 +102,27 @@ body {
   right: 1070px;
 }  
 
-.lbutton {
-  display: block;
-  height: 150px;
-  width: 315px;
-  position: fixed;
-  align-items: center;
-  bottom: 516px;
-  left: 800px;
+/* for variable type sizing */
+@media screen and (min-width: 320px) {
+  body {
+    font-size: calc(10px + 13 * ((100vw - 320px) / 960));
+  }
 }
 
-.rbutton {
-  display: block;
-  height: 150px;
-  width: 315px;
-  position: fixed;
-  align-items: center;
-  bottom: 516px;
-  right: 800px;
+@media screen and (min-width: 1280px) {
+  body {
+    font-size: 24px;
+  }
+
 }
 
 #footer {
+    font-size: .75em;
     width: 100%;
     overflow: hidden;
     text-align: center;
     color: black;
-    font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
     font-family: Helvetica, sans-serif;
-    height: 50px;
 }
