--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -40,14 +40,13 @@ body {
   top: 0;
   left: 0;
   width: calc(100% - 40px);
-  background-color: tan;
+  background-color: #f9edbc;
   padding: 20px;
   text-align: left;
   color: black;
   font-size: 1em;
   font-weight: 400;
   font-family: "Fira Sans";
-  border-bottom: 3px solid black;
 }
 
 .cbutton {
@@ -57,7 +56,7 @@ body {
   bottom: 5em;
   left: calc(50% - 2.5em);
   padding: 1em;
-  background-color: red;
+  background-color: #c21f42;
   display: inline-block;
   text-align: center;
 }
@@ -76,7 +75,7 @@ body {
   left: 20%;
   bottom: 5em;
   padding: 1em;
-  background-color: red;
+  background-color: #c21f42;
   display: inline-block;
   text-align: center;
 }
@@ -87,7 +86,7 @@ body {
   right: 20%;
   bottom: 5em;
   padding: 1em;
-  background-color: red;
+  background-color: #c21f42;
   display: inline-block;
   text-align: center;
 }
