--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -72,6 +72,8 @@ body {
 .lbutton {
   border-radius: 25px;
   position: absolute;
+  height: 150px;
+  width:315px;
   left: 20%;
   bottom: 5em;
   padding: 1em;
@@ -83,6 +85,8 @@ body {
 .rbutton {
   border-radius: 25px;
   position: absolute;
+  height: 150px;
+  width:315px;
   right: 20%;
   bottom: 5em;
   padding: 1em;
