--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* vars */
 :root {
-  --background-color: #e5e49c;
+  --background-color: #d3d3d3;
   --link-color: #E2E3E3;
   --alt-link-color: #111;
   --body-color: #111111;
@@ -18,7 +18,7 @@ body {
     text-align: left;
     margin: 0;
     color: var(--body-color);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Jost';
     font-size: 12px;
     line-height: 1.6;
     min-width: 320px;
